--- a/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
+++ b/tasks/week_5_tasks/Task_ViT_HuggingFace.ipynb
@@ -4,8 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMBtNG8G6lH1kI3MKkYAMl5",
+      "authorship_tag": "ABX9TyOAN6IQHuNqFnXMf8Wl+9oO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4004,7 +4005,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 628
+          "height": 713
         },
         "id": "i1IepW6UapU8",
         "outputId": "da963408-40b3-4c6b-fa7e-3ea05f44e4d5"
@@ -4049,7 +4050,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 584
+          "height": 664
         },
         "id": "6398b95f",
         "outputId": "74b21a7b-1c1f-4d3f-e007-e18c3e8e6d93"
@@ -4462,11 +4463,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8588eeeb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8588eeeb",
+        "outputId": "329cded8-4b7f-4f24-b8b6-30a5b0c7b2c2"
       },
       "source": [
-        "import tensorflow as tf\n",
-        "\n",
         "# Define Keras augmentation layers\n",
         "# These layers are applied to the processed tensors (after resizing by the processor)\n",
         "augment_layers = tf.keras.Sequential([\n",
@@ -4501,8 +4504,16 @@
         "\n",
         "print(\"Transformation functions (transform_train, transform_eval) and Keras augmentation layers defined.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Transformation functions (transform_train, transform_eval) and Keras augmentation layers defined.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
