--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP1vwkaSfimXbzoxmWw21li",
+      "authorship_tag": "ABX9TyNiwpQ3+CR812eeYJcmk+6J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1800,6 +1800,136 @@
       "metadata": {
         "id": "FQa7QOtw1HAK"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1ebd98d4"
+      },
+      "source": [
+        "## **Section 4: Modeling (From Scratch) (Pembuatan Model dari Dasar)**\n",
+        "\n",
+        "**Penjelasan:** Di sini kita akan membangun arsitektur Convolutional Neural Network (CNN) dasar dari awal, tanpa menggunakan model pre-trained atau transfer learning. Arsitekturnya akan mengikuti pola umum Conv -> Pool -> BatchNorm -> Dropout -> Dense layers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eca2ffd1"
+      },
+      "source": [
+        "### **4.1. Build the CNN Architecture (Membangun Arsitektur CNN)**\n",
+        "\n",
+        "**Penjelasan:** Menggunakan Keras Sequential API untuk menumpuk layer-layer CNN dan Dense. Arsitektur ini didesain untuk menangani input gambar berukuran (IMG_WIDTH, IMG_HEIGHT, CHANNELS) dan mengklasifikasikan ke dalam NUM_CLASSES kategori."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6952907b",
+        "outputId": "0c9b0483-5667-4d97-98fa-c79004ba09d2"
+      },
+      "source": [
+        "# Define the input shape\n",
+        "input_shape = (IMG_WIDTH, IMG_HEIGHT, CHANNELS)\n",
+        "\n",
+        "# Build the Sequential model\n",
+        "model = Sequential([\n",
+        "    # Input Layer (optional but good practice)\n",
+        "    InputLayer(input_shape=input_shape),\n",
+        "\n",
+        "    # Block 1\n",
+        "    Conv2D(filters=32, kernel_size=(3, 3), activation='relu', padding='same'),\n",
+        "    BatchNormalization(),\n",
+        "    MaxPooling2D(pool_size=(2, 2)),\n",
+        "    Dropout(0.25), # Increased dropout after pooling\n",
+        "\n",
+        "    # Block 2\n",
+        "    Conv2D(filters=64, kernel_size=(3, 3), activation='relu', padding='same'),\n",
+        "    BatchNormalization(),\n",
+        "    MaxPooling2D(pool_size=(2, 2)),\n",
+        "    Dropout(0.25),\n",
+        "\n",
+        "    # Block 3\n",
+        "    Conv2D(filters=128, kernel_size=(3, 3), activation='relu', padding='same'),\n",
+        "    BatchNormalization(),\n",
+        "    MaxPooling2D(pool_size=(2, 2)),\n",
+        "    Dropout(0.25),\n",
+        "\n",
+        "    # Flatten Layer\n",
+        "    Flatten(),\n",
+        "\n",
+        "    # Dense Layers\n",
+        "    Dense(units=128, activation='relu'),\n",
+        "    BatchNormalization(), # Added Batch Normalization before final dropout\n",
+        "    Dropout(0.5), # Stronger dropout before the output layer\n",
+        "\n",
+        "    # Output Layer\n",
+        "    Dense(units=NUM_CLASSES, activation='softmax') # NUM_CLASSES from data generator\n",
+        "])"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/core/input_layer.py:27: UserWarning: Argument `input_shape` is deprecated. Use `shape` instead.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "09a02c57"
+      },
+      "source": [
+        "### **4.2. Compile the Model (Kompilasi Model)**\n",
+        "\n",
+        "**Penjelasan:** Mengkonfigurasi model untuk proses pelatihan dengan menentukan optimizer (Adam), fungsi loss (categorical crossentropy untuk klasifikasi multi-kelas), dan metrik evaluasi (akurasi)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ba5a4767"
+      },
+      "source": [
+        "# Compile the model\n",
+        "model.compile(optimizer=Adam(),\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])"
+      ],
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6ffb753c"
+      },
+      "source": [
+        "### **4.3. Display Model Summary (Tampilkan Rangkuman Model)**\n",
+        "\n",
+        "**Penjelasan:** Menampilkan struktur arsitektur model, jumlah parameter di setiap layer, dan total parameter model. Ini membantu dalam memahami kompleksitas model."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "06d33380"
+      },
+      "source": [
+        "# Display the model summary\n",
+        "model.summary()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
