--- a/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
+++ b/tasks/week_5_tasks/Task_CNN_Scratch.ipynb
@@ -2460,7 +2460,11 @@
             "Epoch 22: val_accuracy did not improve from 0.99279\n",
             "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m144s\u001b[0m 3s/step - accuracy: 0.9247 - loss: 0.2926 - val_accuracy: 0.9688 - val_loss: 0.1199\n",
             "Epoch 23/50\n",
-            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.9238 - loss: 0.2890"
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.9238 - loss: 0.2890\n",
+            "Epoch 23: val_accuracy did not improve from 0.99279\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m202s\u001b[0m 4s/step - accuracy: 0.9237 - loss: 0.2895 - val_accuracy: 0.9832 - val_loss: 0.1034\n",
+            "Epoch 24/50\n",
+            "\u001b[1m53/53\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - accuracy: 0.9273 - loss: 0.2769"
           ]
         }
       ]
