docs: Add project description for MobileNetV2 notebook

--- a/tasks/week_5_tasks/Task_MobileNetV2.ipynb
+++ b/tasks/week_5_tasks/Task_MobileNetV2.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2WtoNWgzVWdK1RR8g/V9B",
+      "authorship_tag": "ABX9TyN9YxIAvyVuLnZQ35JnME4X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,49 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/LatiefDataVisionary/deep-learning-college-task/blob/main/tasks/week_5_tasks/Task_MobileNetV2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Proyek Sistem Presensi Wajah Mahasiswa Menggunakan Deep Learning**\n",
+        "\n",
+        "### **Latar Belakang dan Tujuan Proyek**\n",
+        "\n",
+        "Selamat datang di notebook proyek untuk mata kuliah Deep Learning! Proyek ini bertujuan untuk membangun, melatih, dan mengevaluasi sebuah model *Convolutional Neural Network* (CNN) yang cerdas dan efisien untuk melakukan tugas **pengenalan wajah (face recognition)**. Tujuan akhirnya adalah menciptakan sebuah sistem yang mampu mengidentifikasi mahasiswa secara otomatis dari citra wajah mereka, yang dapat menjadi fondasi untuk sistem presensi otomatis di masa depan.\n",
+        "\n",
+        "Dalam notebook ini, kita akan fokus pada implementasi model menggunakan arsitektur **MobileNetV2**, sebuah model yang terkenal karena keseimbangan luar biasa antara efisiensi komputasi (ringan dan cepat) dan akurasi yang tinggi. Pendekatan ini menggunakan teknik *Transfer Learning*, di mana kita akan memanfaatkan \"pengetahuan\" yang sudah dimiliki MobileNetV2 dari pelatihan pada jutaan gambar, lalu mengadaptasinya secara khusus untuk mengenali wajah-wajah unik di kelas kita.\n",
+        "\n",
+        "### **Mengenal Dataset Kita: Potret Wajah Kelas**\n",
+        "\n",
+        "Dataset yang kita gunakan untuk proyek ini adalah koleksi citra wajah yang dikumpulkan secara khusus dari 57 mahasiswa di dalam kelas. Setiap mahasiswa berkontribusi dengan menyediakan 40 gambar wajah, menjadikan total dataset kita sekitar 2.280 gambar. Koleksi ini bukan sekadar kumpulan foto biasa; dataset ini dirancang untuk merefleksikan tantangan di dunia nyata.\n",
+        "\n",
+        "**Karakteristik Utama Dataset:**\n",
+        "\n",
+        "*   **Jumlah Kelas**: Terdapat **57 kelas** unik, di mana setiap kelas merepresentasikan satu individu mahasiswa.\n",
+        "*   **Identifikasi Kelas**: Setiap mahasiswa diidentifikasi secara unik melalui **Nomor Induk Mahasiswa (NIM)** mereka. Dalam implementasinya, kita akan mengekstrak 10 digit pertama dari nama setiap file gambar untuk digunakan sebagai label kelas.\n",
+        "*   **Struktur Data**: Dataset ini telah dibagi secara proporsional menjadi:\n",
+        "    *   **Data Training (80%)**: Digunakan untuk melatih model agar dapat belajar mengenali pola dan fitur unik dari setiap wajah.\n",
+        "    *   **Data Testing (20%)**: Disimpan terpisah dan digunakan untuk menguji seberapa baik model dapat menggeneralisasi pengetahuannya pada gambar-gambar baru yang belum pernah dilihatnya sebelumnya.\n",
+        "\n",
+        "**Tantangan dan Variasi dalam Dataset:**\n",
+        "\n",
+        "Untuk memastikan model yang kita bangun nantinya tangguh dan andal, dataset ini sengaja dibuat dengan berbagai variasi yang mensimulasikan kondisi penggunaan sehari-hari. Variasi ini mencakup:\n",
+        "\n",
+        "1.  **Variasi Sudut Wajah (Pose)**: Gambar diambil dari berbagai sudut, tidak hanya dari depan (frontal). Ada pose sedikit miring ke kanan dan kiri (sekitar 30°), serta pose menunduk dan mendongak. Ini akan menguji kemampuan model untuk mengenali wajah meskipun tidak dalam posisi ideal.\n",
+        "\n",
+        "2.  **Variasi Ekspresi Wajah**: Manusia tidak selalu berpose netral. Oleh karena itu, dataset ini mencakup ekspresi normal (netral), senyum ringan, sedikit serius atau tegang, hingga kondisi mulut terbuka (seperti saat berbicara).\n",
+        "\n",
+        "3.  **Variasi Kondisi Pencahayaan**: Kualitas pencahayaan dapat sangat memengaruhi penampilan wajah. Dataset ini memiliki gambar yang diambil dalam kondisi cahaya normal yang baik dan kondisi cahaya yang agak redup.\n",
+        "\n",
+        "4.  **Variasi Teknis Gambar**:\n",
+        "    *   **Format**: Semua gambar dalam format `.jpg`.\n",
+        "    *   **Resolusi dan *Aspect Ratio***: Terdapat variasi resolusi dan *aspect ratio* (misalnya 1:1, 3:4, 9:16), yang menjadi tantangan teknis dalam tahap *preprocessing* data sebelum dimasukkan ke dalam model.\n",
+        "\n",
+        "Tujuan kita adalah melatih model MobileNetV2 agar mampu mengatasi semua variasi ini dan mencapai akurasi setinggi mungkin dalam tugas identifikasi wajah pada data tes. Selamat bekerja dan mari kita mulai!"
+      ],
+      "metadata": {
+        "id": "eKFYzX-3OIRZ"
+      }
     },
     {
       "cell_type": "markdown",
