edit isi Proyek Sistem Presensi Wajah Mahasiswa Menggunakan Deep Learning

--- a/tasks/week_7_tasks/Task_MobileNetV3.ipynb
+++ b/tasks/week_7_tasks/Task_MobileNetV3.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN9YxIAvyVuLnZQ35JnME4X",
+      "authorship_tag": "ABX9TyP994o1xbW/cvemM4F2s7oa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "e74a453a"
+      },
       "source": [
         "# **Proyek Sistem Presensi Wajah Mahasiswa Menggunakan Deep Learning**\n",
         "\n",
@@ -38,19 +41,19 @@
         "\n",
         "Selamat datang di notebook proyek untuk mata kuliah Deep Learning! Proyek ini bertujuan untuk membangun, melatih, dan mengevaluasi sebuah model *Convolutional Neural Network* (CNN) yang cerdas dan efisien untuk melakukan tugas **pengenalan wajah (face recognition)**. Tujuan akhirnya adalah menciptakan sebuah sistem yang mampu mengidentifikasi mahasiswa secara otomatis dari citra wajah mereka, yang dapat menjadi fondasi untuk sistem presensi otomatis di masa depan.\n",
         "\n",
-        "Dalam notebook ini, kita akan fokus pada implementasi model menggunakan arsitektur **MobileNetV2**, sebuah model yang terkenal karena keseimbangan luar biasa antara efisiensi komputasi (ringan dan cepat) dan akurasi yang tinggi. Pendekatan ini menggunakan teknik *Transfer Learning*, di mana kita akan memanfaatkan \"pengetahuan\" yang sudah dimiliki MobileNetV2 dari pelatihan pada jutaan gambar, lalu mengadaptasinya secara khusus untuk mengenali wajah-wajah unik di kelas kita.\n",
+        "Dalam notebook ini, kita akan fokus pada implementasi model menggunakan arsitektur **MobileNetV3**, sebuah model yang terkenal karena keseimbangan luar biasa antara efisiensi komputasi (ringan dan cepat) dan akurasi yang tinggi. Pendekatan ini menggunakan teknik *Transfer Learning*, di mana kita akan memanfaatkan \"pengetahuan\" yang sudah dimiliki MobileNetV3 dari pelatihan pada jutaan gambar, lalu mengadaptasinya secara khusus untuk mengenali wajah-wajah unik di kelas kita. Selain itu, untuk pengujian model secara langsung menggunakan kamera, kami berencana menggunakan MTCNN (Multi-task Cascaded Convolutional Networks) untuk deteksi wajah yang lebih akurat.\n",
         "\n",
-        "### **Mengenal Dataset Kita: Potret Wajah Kelas**\n",
+        "### **Mengenal Dataset Kita: Potret Wajah Kelas (Versi 2.0)**\n",
         "\n",
-        "Dataset yang kita gunakan untuk proyek ini adalah koleksi citra wajah yang dikumpulkan secara khusus dari 57 mahasiswa di dalam kelas. Setiap mahasiswa berkontribusi dengan menyediakan 40 gambar wajah, menjadikan total dataset kita sekitar 2.280 gambar. Koleksi ini bukan sekadar kumpulan foto biasa; dataset ini dirancang untuk merefleksikan tantangan di dunia nyata.\n",
+        "Dataset yang kita gunakan untuk proyek ini adalah koleksi citra wajah versi 2.0 yang dikumpulkan secara khusus dari **57 mahasiswa** di dalam kelas. Setiap mahasiswa berkontribusi dengan menyediakan **40 gambar wajah**, menjadikan total dataset kita sekitar **2.280 gambar**. Koleksi ini bukan sekadar kumpulan foto biasa; dataset ini dirancang untuk merefleksikan tantangan di dunia nyata.\n",
         "\n",
         "**Karakteristik Utama Dataset:**\n",
         "\n",
         "*   **Jumlah Kelas**: Terdapat **57 kelas** unik, di mana setiap kelas merepresentasikan satu individu mahasiswa.\n",
-        "*   **Identifikasi Kelas**: Setiap mahasiswa diidentifikasi secara unik melalui **Nomor Induk Mahasiswa (NIM)** mereka. Dalam implementasinya, kita akan mengekstrak 10 digit pertama dari nama setiap file gambar untuk digunakan sebagai label kelas.\n",
-        "*   **Struktur Data**: Dataset ini telah dibagi secara proporsional menjadi:\n",
-        "    *   **Data Training (80%)**: Digunakan untuk melatih model agar dapat belajar mengenali pola dan fitur unik dari setiap wajah.\n",
-        "    *   **Data Testing (20%)**: Disimpan terpisah dan digunakan untuk menguji seberapa baik model dapat menggeneralisasi pengetahuannya pada gambar-gambar baru yang belum pernah dilihatnya sebelumnya.\n",
+        "*   **Identifikasi Kelas**: Setiap mahasiswa diidentifikasi secara unik melalui **Nomor Induk Mahasiswa (NIM) dan Nama Mahasiswa (NPM_Nama)** yang diekstrak dari nama setiap file gambar untuk digunakan sebagai label kelas.\n",
+        "*   **Struktur Data**: Dataset ini telah dibagi menjadi:\n",
+        "    *   **Data Training (24 gambar per mahasiswa)**: Digunakan untuk melatih model agar dapat belajar mengenali pola dan fitur unik dari setiap wajah.\n",
+        "    *   **Data Testing (16 gambar per mahasiswa)**: Disimpan terpisah dan digunakan untuk menguji seberapa baik model dapat menggeneralisasi pengetahuannya pada gambar-gambar baru yang belum pernah dilihatnya sebelumnya.\n",
         "\n",
         "**Tantangan dan Variasi dalam Dataset:**\n",
         "\n",
@@ -64,13 +67,10 @@
         "\n",
         "4.  **Variasi Teknis Gambar**:\n",
         "    *   **Format**: Semua gambar dalam format `.jpg`.\n",
-        "    *   **Resolusi dan *Aspect Ratio***: Terdapat variasi resolusi dan *aspect ratio* (misalnya 1:1, 3:4, 9:16), yang menjadi tantangan teknis dalam tahap *preprocessing* data sebelum dimasukkan ke dalam model.\n",
+        "    *   **Resolusi dan *Aspect Ratio***: Terdapat variasi resolusi dan *aspect Ratio* (misalnya 1:1, 3:4, 9:16), yang menjadi tantangan teknis dalam tahap *preprocessing* data sebelum dimasukkan ke dalam model.\n",
         "\n",
-        "Tujuan kita adalah melatih model MobileNetV2 agar mampu mengatasi semua variasi ini dan mencapai akurasi setinggi mungkin dalam tugas identifikasi wajah pada data tes. Selamat bekerja dan mari kita mulai!"
-      ],
-      "metadata": {
-        "id": "eKFYzX-3OIRZ"
-      }
+        "Tujuan kita adalah melatih model MobileNetV3 agar mampu mengatasi semua variasi ini dan mencapai akurasi setinggi mungkin dalam tugas identifikasi wajah pada data tes. Selamat bekerja dan mari kita mulai!\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -201,7 +201,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Link Dataset Google Drive: https://drive.google.com/drive/folders/1S5mRxYOfTPAmfqqFFLfbV_D5eWj5J9ox?usp=sharing"
+        "Link Dataset Google Drive: https://drive.google.com/file/d/1JKU_t2zn6Z20BIXWZDvZpqmWgwErgboi/view"
       ],
       "metadata": {
         "id": "sa181Rqnk7PG"
@@ -214,8 +214,8 @@
       },
       "source": [
         "# Define Directory Paths (Definisi Path Direktori)\n",
-        "TRAIN_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0/Data Train'\n",
-        "TEST_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0/Data Test'\n",
+        "TRAIN_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V2.0/Data Train'\n",
+        "TEST_DIR = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V2.0/Data Test'\n",
         "\n",
         "# Define Image Parameters (Definisi Parameter Gambar)\n",
         "IMG_HEIGHT = 150\n",
@@ -252,7 +252,7 @@
       },
       "source": [
         "# Define the path to the zip file in Google Drive\n",
-        "zip_path = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V1.0.zip'\n",
+        "zip_path = '/content/drive/MyDrive/Dataset/Dataset Sistem Presensi Wajah V2.0.zip'\n",
         "extract_path = '/content/dataset' # Directory to extract the dataset\n",
         "\n",
         "# Create the extraction directory if it doesn't exist\n",
