update  di bagian 1.1. Import Core Libraries (Impor Library Utama)

--- a/tasks/week_7_tasks/Task_MobileNetV3.ipynb
+++ b/tasks/week_7_tasks/Task_MobileNetV3.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP994o1xbW/cvemM4F2s7oa",
+      "authorship_tag": "ABX9TyNiCCGajCj3VGAqhqu4X7jJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,13 +97,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "23020928"
+        "id": "23020928",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "14acdd53-d887-4e9e-fc4b-5e26ce8d2d6c"
       },
       "source": [
-        "# !pip install opencv-python"
+        "!pip install opencv-python\n",
+        "!pip install mtcnn"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.12/dist-packages (4.12.0.88)\n",
+            "Requirement already satisfied: numpy<2.3.0,>=2 in /usr/local/lib/python3.12/dist-packages (from opencv-python) (2.0.2)\n",
+            "Collecting mtcnn\n",
+            "  Downloading mtcnn-1.0.0-py3-none-any.whl.metadata (5.8 kB)\n",
+            "Requirement already satisfied: joblib>=1.4.2 in /usr/local/lib/python3.12/dist-packages (from mtcnn) (1.5.2)\n",
+            "Collecting lz4>=4.3.3 (from mtcnn)\n",
+            "  Downloading lz4-4.4.5-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl.metadata (3.8 kB)\n",
+            "Downloading mtcnn-1.0.0-py3-none-any.whl (1.9 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m34.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading lz4-4.4.5-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl (1.4 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m95.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: lz4, mtcnn\n",
+            "Successfully installed lz4-4.4.5 mtcnn-1.0.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,19 +148,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f58a1269",
-        "outputId": "a3af1022-b714-48f4-8782-f4df24bad5bb"
+        "outputId": "c1c43452-6319-4e4b-b371-3c86c0ede38e"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -182,9 +207,29 @@
         "import os\n",
         "import zipfile\n",
         "import seaborn as sns\n",
-        "from sklearn.metrics import classification_report, confusion_matrix"
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "\n",
+        "# --- Helper Function for finding image files ---\n",
+        "def find_image_files_recursive(directory):\n",
+        "    \"\"\"\n",
+        "    Finds all image files (jpg, jpeg, png) recursively within a directory.\n",
+        "\n",
+        "    Args:\n",
+        "        directory (str): The root directory to search.\n",
+        "\n",
+        "    Returns:\n",
+        "        list: A list of full paths to the image files found.\n",
+        "    \"\"\"\n",
+        "    if not os.path.exists(directory):\n",
+        "        print(f\"Warning: Directory not found for finding images: {directory}\")\n",
+        "        return []\n",
+        "\n",
+        "    image_extensions = ['.jpg', '.jpeg', '.png']\n",
+        "    all_files_recursive = glob.glob(os.path.join(directory, '**', '*.*'), recursive=True)\n",
+        "    image_files = [f for f in all_files_recursive if os.path.splitext(f)[1].lower() in image_extensions]\n",
+        "    return image_files"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
