--- a/tasks/week_7_tasks/Task_MobileNetV3.ipynb
+++ b/tasks/week_7_tasks/Task_MobileNetV3.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN4AN8yHrBDsGoG7OYmNwp8",
+      "authorship_tag": "ABX9TyNmIxwpnZukyxtpPnGVtt6g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,118 +97,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "23020928",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "df64415e-8f0f-465b-d5ca-106f15ab651b"
+        "id": "23020928"
       },
       "source": [
         "!pip install opencv-python\n",
-        "!pip install mtcnn\n",
-        "!pip install mediapipe"
+        "!pip install mtcnn"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[33mWARNING: Ignoring invalid distribution ~rotobuf (/usr/local/lib/python3.12/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0mRequirement already satisfied: opencv-python in /usr/local/lib/python3.12/dist-packages (4.12.0.88)\n",
-            "Collecting numpy<2.3.0,>=2 (from opencv-python)\n",
-            "  Using cached numpy-2.2.6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
-            "Using cached numpy-2.2.6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.5 MB)\n",
-            "\u001b[33mWARNING: Ignoring invalid distribution ~rotobuf (/usr/local/lib/python3.12/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0mInstalling collected packages: numpy\n",
-            "  Attempting uninstall: numpy\n",
-            "\u001b[33m    WARNING: Ignoring invalid distribution ~rotobuf (/usr/local/lib/python3.12/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0m    Found existing installation: numpy 1.26.4\n",
-            "    Uninstalling numpy-1.26.4:\n",
-            "      Successfully uninstalled numpy-1.26.4\n",
-            "\u001b[33mWARNING: Ignoring invalid distribution ~rotobuf (/usr/local/lib/python3.12/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "mediapipe 0.10.21 requires protobuf<5,>=4.25.3, which is not installed.\n",
-            "tensorflow 2.19.0 requires protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.3, which is not installed.\n",
-            "ydf 0.13.0 requires protobuf<7.0.0,>=5.29.1, which is not installed.\n",
-            "tensorflow-datasets 4.9.9 requires protobuf>=3.20, which is not installed.\n",
-            "yfinance 0.2.66 requires protobuf>=3.19.0, which is not installed.\n",
-            "orbax-checkpoint 0.11.26 requires protobuf, which is not installed.\n",
-            "tensorflow-hub 0.16.1 requires protobuf>=3.19.6, which is not installed.\n",
-            "tensorboard 2.19.0 requires protobuf!=4.24.0,>=3.19.6, which is not installed.\n",
-            "mediapipe 0.10.21 requires numpy<2, but you have numpy 2.2.6 which is incompatible.\n",
-            "tensorflow 2.19.0 requires numpy<2.2.0,>=1.26.0, but you have numpy 2.2.6 which is incompatible.\n",
-            "numba 0.60.0 requires numpy<2.1,>=1.22, but you have numpy 2.2.6 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed numpy-2.2.6\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "numpy"
-                ]
-              },
-              "id": "d4c068c62d474892b16d4157a9305255"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[33mWARNING: Ignoring invalid distribution ~rotobuf (/usr/local/lib/python3.12/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0mRequirement already satisfied: mtcnn in /usr/local/lib/python3.12/dist-packages (1.0.0)\n",
-            "Requirement already satisfied: joblib>=1.4.2 in /usr/local/lib/python3.12/dist-packages (from mtcnn) (1.5.2)\n",
-            "Requirement already satisfied: lz4>=4.3.3 in /usr/local/lib/python3.12/dist-packages (from mtcnn) (4.4.5)\n",
-            "\u001b[33mWARNING: Ignoring invalid distribution ~rotobuf (/usr/local/lib/python3.12/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~rotobuf (/usr/local/lib/python3.12/dist-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0mRequirement already satisfied: mediapipe in /usr/local/lib/python3.12/dist-packages (0.10.21)\n",
-            "Requirement already satisfied: absl-py in /usr/local/lib/python3.12/dist-packages (from mediapipe) (1.4.0)\n",
-            "Requirement already satisfied: attrs>=19.1.0 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (25.4.0)\n",
-            "Requirement already satisfied: flatbuffers>=2.0 in /usr/local/lib/python3.12/dist-packages (from mediapipe) (25.9.23)\n",
-            "Requirement already satisfied: jax in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.7.1)\n",
-            "Requirement already satisfied: jaxlib in /usr/local/lib/python3.12/dist-packages (from mediapipe) (0.7.1)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (from mediapipe) (3.10.0)\n",
-            "Collecting numpy<2 (from mediapipe)\n",
-            "  Using cached numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
-            "Requirement already satisfied: opencv-contrib-python in /usr/local/lib/python3.12/dist-packages (from mediapipe) (4.11.0.86)\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_internal/cli/base_command.py\", line 179, in exc_logging_wrapper\n",
-            "    status = run_func(*args)\n",
-            "             ^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_internal/cli/req_command.py\", line 67, in wrapper\n",
-            "    return func(self, options, args)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_internal/commands/install.py\", line 377, in run\n",
-            "    requirement_set = resolver.resolve(\n",
-            "                      ^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_internal/resolution/resolvelib/resolver.py\", line 95, in resolve\n",
-            "    result = self._result = resolver.resolve(\n",
-            "                            ^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_vendor/resolvelib/resolvers.py\", line 546, in resolve\n",
-            "    state = resolution.resolve(requirements, max_rounds=max_rounds)\n",
-            "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_vendor/resolvelib/resolvers.py\", line 427, in resolve\n",
-            "    failure_causes = self._attempt_to_pin_criterion(name)\n",
-            "                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_vendor/resolvelib/resolvers.py\", line 239, in _attempt_to_pin_criterion\n",
-            "    criteria = self._get_updated_criteria(candidate)\n",
-            "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_vendor/resolvelib/resolvers.py\", line 230, in _get_updated_criteria\n",
-            "    self._add_to_criteria(criteria, requirement, parent=candidate)\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_vendor/resolvelib/resolvers.py\", line 173, in _add_to_criteria\n",
-            "    if not criterion.candidates:\n",
-            "           ^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/pip/_vendor/resolvelib/structs.py\", line 156, in __bool__\n",
-            "^C\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -278,6 +174,8 @@
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "import glob\n",
         "import re # Import regex module\n",
+        "import mediapipe as mp # Import MediaPipe\n",
+        "import cv2\n",
         "\n",
         "# --- Helper Function for finding image files ---\n",
         "def find_image_files_recursive(directory):\n",
@@ -768,11 +666,7 @@
         "id": "3ab7b2fb"
       },
       "source": [
-        "# Implement MediaPipe Cropping Function\n",
-        "import mediapipe as mp # Import MediaPipe\n",
-        "import cv2\n",
-        "import os\n",
-        "\n",
+        "!pip install mediapipe\n",
         "# Initialize MediaPipe Face Detection\n",
         "mp_face_detection = mp.solutions.face_detection\n",
         "face_detection = mp_face_detection.FaceDetection(model_selection=1, min_detection_confidence=0.7)\n",
